# fxpixiv

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  default.nix  fxpixiv.service.nix  pxiv.service.nix
.cargo/: config.toml
fxpixiv/: Cargo.toml
fxpixiv/src/: main.rs
libpixiv/: Cargo.toml  README.md
libpixiv/src/: lib.rs  models.rs
src/: main.rs
