[package]
name = "fxpixiv"
version = "0.1.0"
edition = "2021"

[dependencies]
tl = "0.7.8"
json = "0.12.4"
scraper = "0.20.0"
maud = "0.26.0"
libpixiv = { path = "../libpixiv" }
rocket = { version = "0.5.1", features = ["json"] }
rocket_db_pools = { version = "0.2.0", features = ["sqlx_sqlite"] }
chrono = "0.4.38"